# ReloadedCode

./: .gitignore  README.MD  README.md  SANDBOX-PROFILES.md
src/: AGENTS.md  Cargo.toml
src/.cargo/: verify.ps1  verify.sh
src/coding-tools-core/: Cargo.toml  README.md
src/coding-tools-core/src/: fs.rs  lib.rs  preamble.rs
src/coding-tools-core/src/context/: bash.txt  mod.rs  read_allowed.txt
src/coding-tools-core/src/operations/: bash.rs  edit.rs  grep.rs  mod.rs  read.rs  todo.rs  webfetch.rs  write.rs
src/coding-tools-core/src/path/: absolute.rs  allowed.rs
src/coding-tools-rig/: Cargo.toml  README.md
src/coding-tools-rig/examples/: basic.rs  full_agent.rs  sandboxed.rs
src/coding-tools-rig/src/: bash.rs  lib.rs  task.rs  todo.rs  webfetch.rs
src/coding-tools-rig/src/absolute/: edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src/coding-tools-rig/src/allowed/: edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src/docs/: mkdocs.yml  start_docs.py
src/docs/src/: comparison.md  examples.md  getting-started.md  hooks.md  migration.md  models-catalog.md  sandboxing.md
src/llm-coding-tools-agents/: ARCHITECTURE.md  Cargo.toml  README.md
src/llm-coding-tools-agents/benches/: parser.rs  runtime_task.rs
src/llm-coding-tools-agents/benches/fixtures/: orchestrator-quality-gate-gpt5.md
src/llm-coding-tools-agents/src/: catalog.rs  config.rs  extensions.rs  lib.rs  loader.rs
src/llm-coding-tools-agents/src/parser/: mod.rs  preprocessor.rs
src/llm-coding-tools-agents/src/path/: resolver.rs
src/llm-coding-tools-agents/src/runtime/: builder.rs  mod.rs  model.rs  state.rs  task.rs  tool_catalog.rs
src/llm-coding-tools-agents/src/types/: config.rs  error.rs  mod.rs  tool_settings.rs
src/llm-coding-tools-bubblewrap/: ARCHITECTURE.md  Cargo.toml  README.md
src/llm-coding-tools-bubblewrap/src/: lib.rs  path_util.rs  probe.rs
src/llm-coding-tools-bubblewrap/src/profile/: builder.rs  factory.rs  layout.rs  mod.rs  presets.rs  types.rs  validation.rs
src/llm-coding-tools-bubblewrap/src/wrap/: blocking.rs  command.rs  mod.rs  tokio.rs
src/llm-coding-tools-core/: Cargo.toml  README.md
src/llm-coding-tools-core/benches/: model_catalog_builder.rs  path_resolvers.rs  permissions.rs  tools_edit.rs  tools_glob.rs  tools_grep.rs  tools_read.rs  tools_write.rs
src/llm-coding-tools-core/benches/common/: corpus_medium.rs  mod.rs
src/llm-coding-tools-core/examples/: preamble_preview.rs  system_prompt_preview.rs  system_prompt_preview_compare.rs  system_prompt_preview_readonly.rs
src/llm-coding-tools-core/examples/system_prompt/: build.rs  definitions.rs  mock_tools.rs  mod.rs  report.rs  types.rs
src/llm-coding-tools-core/src/: credentials.rs  error.rs  lib.rs  output.rs  permissions.rs  permissions_ext.rs  preamble.rs  system_prompt.rs  tool_names.rs  util.rs
src/llm-coding-tools-core/src/context/: bash.txt  edit_absolute.txt  edit_allowed.txt  git_workflow.txt  github_cli.txt  glob_absolute.txt  glob_allowed.txt  grep_absolute.txt  grep_allowed.txt  mod.rs  read_absolute.txt  read_allowed.txt  task.txt  todoread.txt  todowrite.txt  webfetch.txt  write_absolute.txt  write_allowed.txt
src/llm-coding-tools-core/src/fs/: blocking_impl.rs  tokio_impl.rs
src/llm-coding-tools-core/src/internal/: hash63.rs  hash64.rs  mod.rs  packed_permission.rs
src/llm-coding-tools-core/src/models/: mod.rs  provider_type.rs
src/llm-coding-tools-core/src/operations/: edit.rs  glob.rs  grep.rs  mod.rs  read.rs  task.rs
src/llm-coding-tools-core/src/path/: absolute.rs  allowed.rs  mod.rs
src/llm-coding-tools-core/src/tool_metadata/: bash.rs  edit.rs  glob.rs  grep.rs  read.rs  task.rs  webfetch.rs
src/llm-coding-tools-models-dev/: Cargo.toml  README.md
src/llm-coding-tools-models-dev/src/: error.rs  lib.rs
src/llm-coding-tools-rig/: Cargo.toml  README.md
src/llm-coding-tools-rig/examples/: basic.rs  full_agent.rs  rig-basic.rs  rig-sandboxed.rs  sandboxed.rs
src/llm-coding-tools-rig/src/: bash.rs  lib.rs  task.rs  todo.rs  webfetch.rs
src/llm-coding-tools-serdesai/: AGENTS-ARCHITECTURE.md  Cargo.toml  README.md
src/llm-coding-tools-serdesai/examples/: basic.rs  sandboxed.rs  serdesai-agents.rs  serdesai-basic.rs  serdesai-sandboxed-bash.rs  serdesai-sandboxed.rs  serdesai-task.rs
src/llm-coding-tools-serdesai/src/: agent_ext.rs  bash.rs  convert.rs  lib.rs  task.rs  todo.rs  tool_catalog.rs  webfetch.rs
src/reloaded-code-agents/: ARCHITECTURE.md  Cargo.toml  README.md
src/reloaded-code-agents/benches/: parser.rs  runtime_task.rs
src/reloaded-code-agents/src/: extensions.rs  lib.rs  loader.rs  test_helpers.rs
src/reloaded-code-bubblewrap/: ARCHITECTURE.md  Cargo.toml  README.md
src/reloaded-code-bubblewrap/src/: error.rs  lib.rs  probe.rs  test_helpers.rs
src/reloaded-code-core/: Cargo.toml  README.md
src/reloaded-code-core/benches/: model_catalog_builder.rs  path_resolvers.rs  permissions.rs  tools_edit.rs  tools_glob.rs  tools_grep.rs  tools_read.rs  tools_write.rs
src/reloaded-code-core/examples/: system_prompt_preview.rs  system_prompt_preview_compare.rs  system_prompt_preview_readonly.rs
src/reloaded-code-core/src/: error.rs  lib.rs  permissions.rs  permissions_ext.rs  system_prompt.rs  tool_catalog.rs  util.rs  workspace.rs
src/reloaded-code-models-dev/: Cargo.toml  README.md
src/reloaded-code-models-dev/src/: error.rs
src/reloaded-code-provider-config/: Cargo.toml
src/reloaded-code-provider-config/examples/: config-loader.rs  providers.yaml
src/reloaded-code-provider-config/src/: api_type.rs  config.rs  error.rs  lib.rs  loader.rs
src/reloaded-code-serdesai/: AGENTS-ARCHITECTURE.md  Cargo.toml  README.md
src/reloaded-code-serdesai/examples/: serdesai-agents.rs  serdesai-basic.rs  serdesai-custom-tool-standalone.rs  serdesai-custom-tool.rs  serdesai-sandboxed-bash.rs  serdesai-sandboxed.rs  serdesai-task.rs
src/reloaded-code-serdesai/src/: agent_ext.rs  convert.rs  lib.rs  mock.rs
src/rig-coding-tools/: Cargo.toml  README.MD
src/rig-coding-tools/src/: error.rs  lib.rs  output.rs  util.rs
(+282 files in other folders)
