
[workspace]
resolver = "2"
members = [
    "llm-coding-tools-core",
    "llm-coding-tools-serdesai",
    "llm-coding-tools-agents",
    "llm-coding-tools-models-dev",
    "llm-coding-tools-bubblewrap",
]

# Profile Build
[profile.profile]
inherits = "release"
strip = false           # symbols are needed for good profile data
debug = true
split-debuginfo = "off" # Some tools on Linux expect embedded symbols, e.g. cargo flamegraph. Keep them together.

# Benchmark Build
[profile.bench]
inherits = "profile"

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"            # Reduce binary size by omitting unwinding infrastructure
# Ensure that on Linux, you get separate .dwp files , in same vein you get .pdb on Windows.
debug = "full"
split-debuginfo = "packed"
