[package]
name = "llm-coding-tools-agents"
version = "0.1.0"
edition = "2021"
description = "Agent configuration loading from OpenCode-style markdown files with YAML frontmatter"
repository = "https://github.com/Sewer56/llm-coding-tools"
license = "Apache-2.0"
include = ["src/**/*", "README.md"]
readme = "README.md"

[dependencies]
# YAML parsing for frontmatter
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Preserve insertion order for permission maps
indexmap = { version = "2", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Fast CRLF to LF conversion
crlf-to-lf-inplace = "0.1"


# Directory scanning with gitignore support
ignore = "0.4.25"

# High-performance hashing (sync version with core crate)
ahash = { version = "0.8", features = ["serde"] }

# Core library for permissions and tool types
llm-coding-tools-core = { path = "../llm-coding-tools-core", version = "0.2.0" }

[dev-dependencies]
tempfile = "3.25"
criterion = "0.8"
indoc = "2"

[[bench]]
name = "parser"
harness = false
