[package]
name = "llm-coding-tools-agents"
version = "0.1.0"
edition = "2021"
description = "Agent configuration loading from markdown files with YAML frontmatter (similar to OpenCode)"
repository = "https://github.com/Sewer56/llm-coding-tools"
license = "Apache-2.0"
include = ["src/**/*", "README.md"]
readme = "README.md"

[dependencies]
# YAML parsing for frontmatter
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Preserve insertion order for permission maps
indexmap = { version = "2", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Fast CRLF to LF conversion
crlf-to-lf-inplace = "0.2"


# Directory scanning with gitignore support
ignore = "0.4.25"

# High-performance hashing (sync version with core crate)
ahash = { version = "0.8", features = ["serde"] }

# Core library for permissions and tool types
llm-coding-tools-core = { path = "../llm-coding-tools-core", version = "0.2.0" }

# Canonicalizes paths, resolving symlinks without requiring the full path to exist
soft-canonicalize = "0.5"

[dev-dependencies]
tempfile = "3.27"
criterion = "0.8"
indoc = "2"
rstest = "0.26"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "runtime_task"
harness = false
