[package]
name = "llm-coding-tools-bubblewrap"
version = "0.1.0"
edition = "2021"
description = "Linux bubblewrap sandbox profiles, probing, and execution for llm-coding-tools"
repository = "https://github.com/Sewer56/llm-coding-tools"
license = "Apache-2.0"
include = ["src/**/*", "README.md"]
readme = "README.md"

[features]
default = ["tokio"]
tokio = ["dep:process-wrap", "process-wrap/tokio1", "process-wrap/process-group"]
blocking = ["dep:process-wrap", "process-wrap/std", "process-wrap/process-group"]

[dependencies]
parking_lot = "0.12"
thiserror = "2.0"
process-wrap = { version = "9", default-features = false, optional = true }

[dev-dependencies]
serial_test = "3"
tempfile = "3.27"
tokio = { version = "1.50", features = ["rt", "macros"] }
