[package]
name = "llm-coding-tools-bubblewrap"
version = "0.1.0"
edition = "2021"
description = "Linux bubblewrap sandbox profiles, probing, and execution for llm-coding-tools"
repository = "https://github.com/Sewer56/llm-coding-tools"
license = "Apache-2.0"
include = ["src/**/*", "README.md"]
readme = "README.md"

[features]
default = ["tokio"]
tokio = ["dep:process-wrap", "process-wrap/tokio1", "process-wrap/process-group"]
blocking = ["dep:process-wrap", "process-wrap/std", "process-wrap/process-group"]
[dependencies]
parking_lot = { workspace = true }
thiserror = { workspace = true }
process-wrap = { workspace = true, optional = true }
tempfile = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
