[package]
name = "llm-coding-tools-rig"
version = "0.1.0"
edition = "2021"
description = "Lightweight, high-performance Rig framework Tool implementations for coding tools"
repository = "https://github.com/Sewer56/llm-coding-tools"
license = "Apache-2.0"
include = ["src/**/*"]
readme = "README.md"

[dependencies]
# Core tool operations (file read/write/edit, glob, grep, bash, etc.)
llm-coding-tools-core = { version = "0.1.0", path = "../llm-coding-tools-core", features = [
    "tokio",
] }

# Implements rig_core::tool::Tool trait for each tool
rig-core = { version = "0.28", default-features = false, features = ["reqwest-rustls"] }

# WebFetchTool needs its own client instance
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
] }

# Tool::definition() returns JSON Schema for LLM parameter validation
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.24"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
