[package]
name = "llm-coding-tools-serdesai"
version = "0.2.0"
edition = "2024"
description = "Lightweight, high-performance serdesAI framework Tool implementations for coding tools"
repository = "https://github.com/Sewer56/llm-coding-tools"
license = "Apache-2.0"
readme = "README.md"
include = ["src/**/*", "examples/**/*", "README.md"]

[features]
default = ["openai"]
# Provider features - pass through to serdes-ai-models
openai = ["serdes-ai-models/openai"]
anthropic = ["serdes-ai-models/anthropic"]
azure = ["serdes-ai-models/azure"]
bedrock = ["serdes-ai-models/bedrock"]
chatgpt-oauth = ["serdes-ai-models/chatgpt-oauth"]
claude-code-oauth = ["serdes-ai-models/claude-code-oauth"]
cohere = ["serdes-ai-models/cohere"]
gemini = ["serdes-ai-models/gemini"]
google = ["serdes-ai-models/google"]
groq = ["serdes-ai-models/groq"]
huggingface = ["serdes-ai-models/huggingface"]
mistral = ["serdes-ai-models/mistral"]
ollama = ["serdes-ai-models/ollama"]
openrouter = ["serdes-ai-models/openrouter"]

[dependencies]
# Core tool operations (file read/write/edit, glob, grep, bash, etc.)
llm-coding-tools-core = { version = "0.2.0", path = "../llm-coding-tools-core", features = [
    "tokio",
] }

# Generic agent runtime dependencies
llm-coding-tools-agents = { version = "0.1.0", path = "../llm-coding-tools-agents" }

# serdes-ai provides Tool trait, ToolDefinition, RunContext
serdes-ai = "0.2.6"
serdes-ai-models = { version = "0.2.6", default-features = false }
serdes-ai-streaming = "0.2"
futures = "0.3"

# Tool trait is async - async-trait is NOT re-exported from serdes-ai
async-trait = "0.1"

# Error derives
thiserror = "2.0"

# Tool parameters use serde for deserialization, serde_json for schema
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for webfetch tool
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
wiremock = "0.6"
ahash = "0.8"
indexmap = "2"
# models.dev catalog loader for examples
llm-coding-tools-models-dev = { version = "0.1.0", path = "../llm-coding-tools-models-dev" }
