[package]
name = "reloaded-code-agents"
version = "0.1.0"
edition = "2021"
description = "Agent configuration loading from markdown files with YAML frontmatter (similar to OpenCode)"
repository = "https://github.com/Reloaded-Project/ReloadedCode"
license = "Apache-2.0"
include = ["src/**/*", "README.md"]
readme = "README.md"

[dependencies]
# YAML parsing for frontmatter
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

# Preserve insertion order for permission maps
indexmap = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Fast CRLF to LF conversion
crlf-to-lf-inplace = { workspace = true }

# Directory scanning with gitignore support
ignore = { workspace = true }

# High-performance hashing (sync version with core crate)
ahash = { workspace = true }

# Core library for permissions and tool types
reloaded-code-core = { workspace = true, features = ["tokio"] }

# Canonicalizes paths, resolving symlinks without requiring the full path to exist
soft-canonicalize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
indoc = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "runtime_task"
harness = false
