[package]
name = "reloaded-code-bubblewrap"
version = "0.1.0"
edition = "2021"
description = "Linux bubblewrap sandbox profiles, probing, and execution for ReloadedCode"
repository = "https://github.com/Reloaded-Project/ReloadedCode"
license = "Apache-2.0"
include = ["src/**/*", "README.md"]
readme = "README.md"
# keywords (search terms): https://crates.io/keywords
keywords = ["bubblewrap", "sandbox", "linux", "container", "security"]
# categories (fixed list): https://crates.io/categories
categories = ["os", "virtualization", "security", "development-tools"]

[features]
default = ["tokio"]
tokio = ["dep:process-wrap", "process-wrap/tokio1", "process-wrap/process-group"]
blocking = ["dep:process-wrap", "process-wrap/std", "process-wrap/process-group"]
[dependencies]
parking_lot = { workspace = true }
thiserror = { workspace = true }
process-wrap = { workspace = true, optional = true }
tempfile = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
